# api_rest_rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20250422152128_criar_tabela_usuario.sql
src/: main.rs
src/api/: config.rs  mod.rs
src/api/usuario/: criar_usuario.rs  mod.rs  obter_usuario.rs  usuario.rs
src/aplicacao/: criar_usuario_aplicacao.rs  mod.rs
src/config/: db_pool.rs  migration.rs  mod.rs
src/dominio/: mod.rs
src/dominio/aplicacao/interface/: criar_usuario_aplicacao.rs  mod.rs  obter_usuario_aplicacao.rs
src/dominio/servico/dto/: usuario.rs
