[package]
name = "api_rest_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"
once_cell = "1.18"
tokio = "1.44.2"





