[package]
name = "api_rest_rust"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"
once_cell = "1.18"




